--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   provider: ^4.3.3
   shared_preferences: any
+  flutter_form_builder: ^4.2.0
+  intl: any
 
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.1
