--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,15 +1,12 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/nobu/flutter
-FLUTTER_APPLICATION_PATH=/Users/nobu/StudioProjects/kanri2
-FLUTTER_TARGET=/Users/nobu/StudioProjects/kanri2/lib/main.dart
+FLUTTER_ROOT=D:\Tools\flutter\flutter
+FLUTTER_APPLICATION_PATH=D:\Project\todu\kanri2
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
-OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=/Users/nobu/flutter/bin/cache/artifacts/engine/ios
+SYMROOT=${SOURCE_ROOT}/../build\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-DART_DEFINES=flutter.inspector.structuredErrors%3Dtrue
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=true
+TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
 PACKAGE_CONFIG=.packages
