--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_slidable: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,12 +36,16 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   provider: ^4.3.3
   shared_preferences: any
+  intl: ^0.16.0
   flutter_form_builder: ^4.2.0
   intl: any
   google_sign_in: any
 
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.1
+
+dependency_overrides:
+  intl: 0.17.0
 
 dev_dependencies:
   flutter_test:
