--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,13 @@ dependencies:
   flutter_form_builder: ^4.2.0
   intl: any
   google_sign_in: any
+  flutter_signin_button: ^2.0.0
 
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.1
+
+dependency_overrides:
+  intl: 0.17.0
 
 dev_dependencies:
   flutter_test:
