--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_form_builder: ^4.2.0
   intl: any
   google_sign_in: any
+  get_it: ^6.0.0
 
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.1
