--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_core: ^0.7.0
-  firebase_crashlytics: ^0.4.0+1
-  firebase_auth: ^0.20.1
-  cloud_firestore: ^0.16.0+1
+  firebase_core: ^1.0.3
+  firebase_crashlytics: ^2.0.0
+  firebase_auth: ^1.0.3
+  cloud_firestore: ^1.0.4
   provider: ^4.3.3
-  shared_preferences: any
-  flutter_form_builder: ^4.2.0
-  intl: any
-  google_sign_in: any
+  shared_preferences: ^2.0.5
+  flutter_form_builder: ^6.0.0-nullsafety.1
+  intl: ^0.17.0
+  google_sign_in: ^5.0.1
   flutter_signin_button: ^2.0.0
 
   # カレンダー機能
-  flutter_simple_customize_calendar: ^1.0.1
+  flutter_simple_customize_calendar: ^1.0.4
 
-dependency_overrides:
-  intl: 0.17.0
+
 
 dev_dependencies:
   flutter_test:
