--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   google_sign_in: ^5.0.1
   flutter_signin_button: ^2.0.0
+  fluttertoast: ^8.0.4
 
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.4
