--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'com.android.support:multidex:1.0.3'
 }
