--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_database: ^6.1.2
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.4
+  # 画像選択機能
+  image_picker: ^0.7.5
+
 
 
 
