--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_core: ^1.0.3
-  firebase_crashlytics: ^2.0.0
+  firebase_crashlytics: ^2.0.6
   firebase_auth: ^1.0.3
   cloud_firestore: ^1.0.4
-  provider: ^4.3.3
+  provider: ^5.0.0
   shared_preferences: ^2.0.5
   flutter_form_builder: ^6.0.0-nullsafety.1
   intl: ^0.17.0
@@ -50,7 +50,7 @@ dependencies:
   # アイコン追加
   font_awesome_flutter: ^9.0.0
   firebase_messaging: ^10.0.2
-
+  google_fonts: ^2.1.0
 
 
 
