--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   firebase_crashlytics: ^2.0.6
   firebase_auth: ^1.0.3
   cloud_firestore: ^1.0.4
-  provider: ^5.0.0
   shared_preferences: ^2.0.5
   flutter_form_builder: ^6.0.0-nullsafety.1
   intl: ^0.17.0
@@ -41,6 +40,8 @@ dependencies:
   fluttertoast: ^8.0.4
   firebase_database: ^7.1.1
   enum_to_string: ^2.0.1
+  # 状態管理（親Widgetから子Widgetにデータを受け渡す）
+  provider: ^5.0.0
   # カレンダー機能
   flutter_simple_customize_calendar: ^1.0.4
   # 画像選択機能
