--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,13 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   # アイコン追加
   font_awesome_flutter: ^9.0.0
-  firebase_messaging: ^10.0.2
+  firebase_messaging: ^10.0.3
+  plugin_platform_interface: ^2.0.0
+  flutter_local_notifications: ^6.0.0
   google_fonts: ^2.1.0
+  firebase_core_platform_interface: ^4.0.1
+  firebase_messaging_platform_interface: ^3.0.2
+  http: ^0.13.0
 
 
 
