--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,45 +18,45 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_slidable: ^0.5.7
+  flutter_slidable: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  firebase_core: ^1.0.3
-  firebase_crashlytics: ^2.0.6
-  firebase_auth: ^1.0.3
-  cloud_firestore: ^1.0.4
-  shared_preferences: ^2.0.5
-  flutter_form_builder: ^6.0.0-nullsafety.1
+  cupertino_icons: ^1.0.3
+  firebase_core: ^1.4.0
+  firebase_crashlytics: ^2.1.1
+  firebase_auth: ^3.0.0
+  cloud_firestore: ^2.4.0
+  shared_preferences: ^2.0.6
+  flutter_form_builder: ^6.0.1
   intl: ^0.17.0
   google_sign_in: ^5.0.4
   flutter_signin_button: ^2.0.0
-  fluttertoast: ^8.0.4
-  firebase_database: ^7.1.1
+  fluttertoast: ^8.0.7
+  firebase_database: ^7.1.2
   enum_to_string: ^2.0.1
   # 状態管理（親Widgetから子Widgetにデータを受け渡す）
   provider: ^5.0.0
   # カレンダー機能
-  flutter_simple_customize_calendar: ^1.0.4
+  flutter_simple_customize_calendar: ^2.0.0
   # 画像選択機能
-  image_picker: ^0.7.5
+  image_picker: ^0.8.2
   # 日付選択
   flutter_datetime_picker: ^1.5.1
   # アイコン追加
-  font_awesome_flutter: ^9.0.0
-  firebase_messaging: ^10.0.3
-  plugin_platform_interface: ^2.0.0
-  flutter_local_notifications: ^5.0.0+4
+  font_awesome_flutter: ^9.1.0
+  firebase_messaging: ^10.0.4
+  plugin_platform_interface: ^2.0.1
+  flutter_local_notifications: 5.0.0+4
   google_fonts: ^2.1.0
   firebase_core_platform_interface: ^4.0.1
-  firebase_messaging_platform_interface: ^3.0.2
-  http: ^0.13.0
+  firebase_messaging_platform_interface: ^3.0.3
+  http: ^0.13.3
   # ライセンス表示
   package_info: ^2.0.2
 
